# triclops_pgr

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDC1394.cmake  triclopsConfig.cmake.in  triclopsConfigVersion.cmake.in
example/: CMakeLists.txt
example/example1/: CMakeLists.txt
example/simplegrab/: CMakeLists.txt  simplegrab.cpp
example/simplestereo/: CMakeLists.txt  simplestereo.cpp
example/xb3stereo/: CMakeLists.txt  xb3stereo.cpp
pre_lib/: CMakeLists.txt
src/: CMakeLists.txt
src/pgrlibdcstereo/: CMakeLists.txt  pgr_stereocam.cpp
src/pnmutils/: CMakeLists.txt
